Added data loader for test data

--- a/Lab1/Lab1.ipynb
+++ b/Lab1/Lab1.ipynb
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "d2741f43",
    "metadata": {},
    "outputs": [
@@ -338,19 +338,18 @@
     "model.load_state_dict(torch.load(\"best_model.pth\"))\n",
     "model.eval()\n",
     "\n",
+    "test_loader = DataLoader(TensorDataset(X_test, y_test), batch_size=32)\n",
+    "\n",
     "all_preds = []\n",
     "all_labels = []\n",
     "\n",
     "with torch.no_grad():\n",
-    "    for i in range(0, len(X_test), 32):\n",
-    "        xb = X_test[i:i+32]\n",
-    "        yb = y_test[i:i+32]\n",
-    "\n",
+    "    for xb, yb in test_loader:\n",
     "        outputs = model(xb)\n",
     "        _, predicted = torch.max(outputs, 1)\n",
     "\n",
-    "        all_preds.extend(predicted.cpu().numpy())\n",
-    "        all_labels.extend(yb.cpu().numpy())\n",
+    "        all_preds.extend(predicted.numpy())\n",
+    "        all_labels.extend(yb.numpy())\n",
     "\n",
     "# Convert to numpy arrays\n",
     "all_preds = np.array(all_preds)\n",
