--- a/Lab1/Lab1.ipynb
+++ b/Lab1/Lab1.ipynb
@@ -1,8 +1,34 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "206a4e4a",
+   "metadata": {},
+   "source": [
+    "# Hand Gesture Classification Using Deep Learning\n",
+    "\n",
+    "## Problem Description\n",
+    "\n",
+    "In ML1, I worked on a multi-class hand gesture classification problem using classical machine learning models such as SVM and Random Forest.\n",
+    "\n",
+    "Each sample consists of 21 hand landmarks extracted from MediaPipe.  \n",
+    "Each landmark has (x, y, z) coordinates, so the total number of input features is:\n",
+    "\n",
+    "21 × 3 = 63 features.\n",
+    "\n",
+    "The goal is to predict the gesture label (e.g., fist, call, dislike, etc.).\n",
+    "\n",
+    "This is a supervised multi-class classification problem where:\n",
+    "\n",
+    "X ∈ R^63  \n",
+    "y ∈ {0, 1, ..., K-1}\n",
+    "\n",
+    "In this notebook, I reimplement the same problem using a Deep Neural Network."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "27996fa7",
    "metadata": {},
    "outputs": [],
@@ -14,8 +40,36 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
-    "from torch.utils.data import DataLoader, TensorDataset\n",
+    "from torch.utils.data import DataLoader, TensorDataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa78b250",
+   "metadata": {},
+   "source": [
+    "## Data Preprocessing\n",
     "\n",
+    "Before training a neural network, preprocessing is very important.\n",
+    "\n",
+    "1) Label Encoding  \n",
+    "The neural network requires numerical class labels, so I encode the gesture names into integer values.\n",
+    "\n",
+    "2) Feature Standardization  \n",
+    "I apply StandardScaler to normalize the features.\n",
+    "\n",
+    "This is important from an optimization perspective. Neural networks are trained using gradient descent. If features are on different scales, the loss surface becomes elongated, which leads to zig-zag updates and slower convergence.\n",
+    "\n",
+    "By standardizing the features, the gradients become more stable and training becomes faster and more reliable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97bf0da7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Load dataset\n",
     "df = pd.read_csv(\"/Users/ahmedtarek/Developer/Python/DL/hand_landmarks_data.csv\")\n",
     "\n",
@@ -29,8 +83,33 @@
     "\n",
     "# Standardization (VERY important for NN)\n",
     "scaler = StandardScaler()\n",
-    "X_scaled = scaler.fit_transform(X)\n",
+    "X_scaled = scaler.fit_transform(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adecc141",
+   "metadata": {},
+   "source": [
+    "## Train / Validation / Test Split\n",
     "\n",
+    "The dataset is split into:\n",
+    "\n",
+    "- Training set → used to update model parameters.\n",
+    "- Validation set → used to monitor generalization and apply early stopping.\n",
+    "- Test set → used only once at the end for final evaluation.\n",
+    "\n",
+    "This separation ensures that the test set remains completely unseen during training.  \n",
+    "It allows us to measure the true generalization performance of the model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8062ffd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Train-validation-test split\n",
     "X_train, X_temp, y_train, y_temp = train_test_split(\n",
     "    X_scaled, y_encoded, test_size=0.3, random_state=42, stratify=y_encoded\n",
@@ -49,6 +128,30 @@
     "\n",
     "X_test = torch.FloatTensor(X_test)\n",
     "y_test = torch.LongTensor(y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7cadf215",
+   "metadata": {},
+   "source": [
+    "## Neural Network Architecture\n",
+    "\n",
+    "I implement a fully connected neural network (Multi-Layer Perceptron).\n",
+    "\n",
+    "Structure:\n",
+    "- Input layer: 63 neurons (one per feature)\n",
+    "- Hidden Layer 1: 128 neurons + ReLU\n",
+    "- Hidden Layer 2: 64 neurons + ReLU\n",
+    "- Output layer: K neurons (number of gesture classes)\n",
+    "\n",
+    "Why ReLU?\n",
+    "\n",
+    "ReLU(x) = max(0, x)\n",
+    "\n",
+    "ReLU helps reduce the vanishing gradient problem and allows deeper models to train more efficiently compared to sigmoid or tanh.\n",
+    "\n",
+    "The model learns nonlinear transformations of the input features, which allows it to capture complex decision boundaries compared to classical linear models."
    ]
   },
   {
@@ -81,6 +184,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6bd8ec77",
+   "metadata": {},
+   "source": [
+    "## Loss Function and Optimization\n",
+    "\n",
+    "For multi-class classification, I use CrossEntropyLoss.\n",
+    "\n",
+    "Cross-entropy measures the difference between predicted class probabilities and the true class label.\n",
+    "\n",
+    "Mathematically:\n",
+    "\n",
+    "L = - Σ y_i log(ŷ_i)\n",
+    "\n",
+    "This encourages the model to assign high probability to the correct class.\n",
+    "\n",
+    "For optimization, I use Adam.\n",
+    "\n",
+    "Adam combines:\n",
+    "- Momentum (to accelerate convergence)\n",
+    "- Adaptive learning rates (to handle different parameter scales)\n",
+    "\n",
+    "This makes training more stable and faster compared to standard gradient descent."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "id": "d7c89444",
@@ -89,6 +218,43 @@
    "source": [
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.Adam(model.parameters(), lr=0.001)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "986c43f0",
+   "metadata": {},
+   "source": [
+    "## Training Process with Early Stopping\n",
+    "\n",
+    "During training, each batch of data goes through the following steps:\n",
+    "\n",
+    "1. **Forward pass** – compute predictions.  \n",
+    "2. **Compute loss** – measure the difference between predictions and true labels.  \n",
+    "3. **Backward pass** – compute gradients using backpropagation.  \n",
+    "4. **Update weights** – adjust model parameters using the Adam optimizer according to the gradient descent rule:\n",
+    "\n",
+    "\\[\n",
+    "\\theta = \\theta - \\alpha \\nabla L(\\theta)\n",
+    "\\]\n",
+    "\n",
+    "Where:  \n",
+    "- **θ** represents the model parameters.  \n",
+    "- **α** is the learning rate.  \n",
+    "- **∇L(θ)** is the gradient of the loss with respect to the parameters.  \n",
+    "\n",
+    "This process is repeated for multiple epochs until the model converges.\n",
+    "\n",
+    "### Early Stopping (Regularization)\n",
+    "\n",
+    "To prevent overfitting, we implement **early stopping** based on validation loss:\n",
+    "\n",
+    "- Training loss usually decreases continuously.  \n",
+    "- Validation loss decreases initially but may start increasing once overfitting begins.  \n",
+    "\n",
+    "We monitor the validation loss after each epoch. If it does not improve for a fixed number of epochs (called **patience**), training stops, and the best model (with the lowest validation loss) is restored.  \n",
+    "\n",
+    "By selecting the parameters that minimize validation loss rather than just training loss, early stopping acts as an **implicit regularization method**, helping the model generalize better to unseen data."
    ]
   },
   {
@@ -321,6 +487,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "045176c3",
+   "metadata": {},
+   "source": [
+    "## Final Test Evaluation\n",
+    "\n",
+    "After training finishes, I load the best saved model and evaluate it on the test set.\n",
+    "\n",
+    "The test set was never used during training or validation.  \n",
+    "Therefore, it provides an unbiased estimate of the model’s generalization performance.\n",
+    "\n",
+    "Evaluation metrics include:\n",
+    "- Accuracy\n",
+    "- Precision\n",
+    "- Recall\n",
+    "- F1-score\n",
+    "\n",
+    "Accuracy is calculated as:\n",
+    "\n",
+    "Accuracy = Correct Predictions / Total Samples\n",
+    "\n",
+    "These metrics give a complete view of classification performance."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d2741f43",
@@ -406,6 +597,30 @@
     "    all_preds,\n",
     "    target_names=le.classes_\n",
     "))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0aacd05",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "In this notebook, I reimplemented a classical supervised classification problem using a Deep Neural Network.\n",
+    "\n",
+    "Compared to classical ML models:\n",
+    "- The neural network learns nonlinear feature representations.\n",
+    "- It uses backpropagation for optimization.\n",
+    "- It can model more complex decision boundaries.\n",
+    "\n",
+    "The full pipeline included:\n",
+    "- Preprocessing\n",
+    "- Proper data splitting\n",
+    "- Model training\n",
+    "- Early stopping\n",
+    "- Final unbiased evaluation\n",
+    "\n",
+    "This demonstrates how a classical ML problem can be effectively solved using a Deep Learning approach."
    ]
   }
  ],
