--- a/Lab1/Lab1.ipynb
+++ b/Lab1/Lab1.ipynb
@@ -875,14 +875,14 @@
     "\n",
     "Deep networks tend to outperform classical models when features are **raw and high-dimensional** (images, text, audio), where they learn hierarchical representations automatically through backpropagation. With only 63 features, the MLP has less room to leverage its capacity advantage.\n",
     "\n",
-    "This does **not** mean Deep Learning failed — 98% accuracy across 18 gesture classes is excellent. It illustrates an important principle:\n",
+    "This does **not** mean Deep Learning failed — 98.47% accuracy across 18 gesture classes is excellent. It illustrates an important principle:\n",
     "\n",
     "> **Model selection should match the data regime. Deep Learning is not universally superior — its advantage depends on the dimensionality, volume, and structure of the data.**\n",
     "\n",
     "### Full Pipeline Summary\n",
     "\n",
     "The complete pipeline included:\n",
-    "- **Preprocessing** — Label encoding and StandardScaler normalization\n",
+    "- **Preprocessing** — Label encoding, translation normalization (wrist as origin), and scale normalization (fingertip distances)\n",
     "- **Data Splitting** — Stratified Train / Validation / Test split (70/15/15)\n",
     "- **Model Training** — Mini-batch gradient descent with Adam optimizer\n",
     "- **Regularization** — Dropout (0.3) and Early Stopping based on validation loss\n",
